# trainingETL

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  terraform.yml
databricks/: databricks.yml
databricks/resources/: etl_jobs.yml
docs/: 01_architecture.md  02_terraform_guide.md  03_etl_pipeline.md  04_data_modeling.md  05_genai_features.md
etl/: pyproject.toml  requirements.txt
etl/bronze/: ingest.py
etl/genai/: categorization.py  embeddings.py
etl/gold/: star_schema.py
etl/silver/: transform_customers.py  transform_orders.py  transform_products.py
etl/utils/: keyvault.py  logging.py  spark.py
sql/analytics/: 01_star_schema.sql
sql/oltp/: 01_create_tables.sql  02_seed_data.sql
terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/: dev.tfvars.example
terraform/modules/databricks/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/keyvault/: main.tf  variables.tf  versions.tf
terraform/modules/sql/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_bronze.py  test_gold.py  test_silver.py
